--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <script type="text/javascript" src="https://unpkg.com/anchor-link@3"></script>
     <script type="text/javascript" src="https://unpkg.com/anchor-link-browser-transport@3"></script>
-    <script src="/wax.js"></script>
+    <script src="/BBBBB/wax.js"></script>
     <script>
 var username;
 var debug_tables;
